--- a/tarea2/Style.css
+++ b/tarea2/Style.css
@@ -10,3 +10,13 @@ html{
     scroll-behavior: smooth;
     font-size: 32px;
 }
+iframe{
+    max-width: 100%;   
+}
+
+img{
+    max-width: 100%;
+}
+table{
+    width: 100%;
+}
